fix spacing bugs

--- a/src/sass/partials/_issues.scss
+++ b/src/sass/partials/_issues.scss
@@ -211,7 +211,7 @@
     @include mq(desktop) {
         text-align: center;
         padding-right: 20px;
-        min-height: 6em;
+        min-height: 10em;
     }
 }
 
@@ -243,7 +243,7 @@
 
     @include mq(tablet) {
         width: 48px;
-        margin-bottom: 4px;
+        margin-bottom: 6px;
     }
 }
 
@@ -283,6 +283,10 @@
     font-family: 'Guardian Sans Web';
     font-size: 16px;
     color: $c-grey;
+
+    @include mq(desktop) {
+        padding-right: 20px;
+    }
 }
 
 .uit-issue__candidiate-image {
